        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=13107
        XPath should raise an exception when trying to parse an unknown function

        Test: fast/xpath/invalid-functions.html

        * xml/XPathFunctions.cpp:
        (WebCore::XPath::createFunction): Return 0 if the function couldn't be created.
        * xml/XPathGrammar.y: Handle nulls returned from createFunction().



Canonical link: https://commits.webkit.org/17122@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@20338 268f45cc-cd09-0410-ab3c-d52691b4dbfc