WebCore/xml/XPathFunctions.cpp
@@ -658,14 +658,8 @@ Function* createFunction(const String& name, const Vector<Expression*>& args)
     HashMap<String, FunctionRec>::iterator functionMapIter = functionMap->find(name);
     FunctionRec* functionRec = 0;
 
-    if (functionMapIter == functionMap->end() || !(functionRec = &functionMapIter->second)->args.contains(args.size())) {
-        deleteAllValues(args);
-
-        // Return a dummy function instead of 0.
-        Function* funcTrue = functionMap->get("true").factoryFn();
-        funcTrue->setName("true");
-        return funcTrue;
-    }
+    if (functionMapIter == functionMap->end() || !(functionRec = &functionMapIter->second)->args.contains(args.size()))
+        return 0;
 
     Function* function = functionRec->factoryFn();
     function->setArguments(args);
